--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/arvoreGeradoraDeRotulosMinimos.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.gson-2.3.1.jar=gson-2.3.1.jar
+file.reference.json-simple-1.1.1.jar=json-simple-1.1.1.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.gson-2.3.1.jar}:\
+    ${file.reference.json-simple-1.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
